fix: dark mode in iframe

--- a/src/pages/viewer/Viewer.css
+++ b/src/pages/viewer/Viewer.css
@@ -1,7 +1,6 @@
 .viewer {
   width: 100%;
   height: auto;
-  padding: 0px 0 30px 0;
-  margin-bottom: 20px;
+  padding: 0;
 }
 
